--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,7 @@
 .container {
-  padding: 0 2rem;
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
